Added Recall score for All Algorithms

--- a/ML_algo_trust_chain.ipynb
+++ b/ML_algo_trust_chain.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "76a46a98",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,8 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.linear_model import LogisticRegression\n"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n"
    ]
   },
   {
@@ -1835,7 +1836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "id": "b08887b2",
    "metadata": {},
    "outputs": [
@@ -1843,7 +1844,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Logistic Regression model accuracy: 86.71%\n"
+      "Logistic Regression model accuracy: 86.71%\n",
+      "\n",
+      "Classification Report:\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'classification_report' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[45]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mLogistic Regression model accuracy: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00macc\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m%\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      7\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mClassification Report:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mclassification_report\u001b[49m(y_test, lr.predict(X_test)))\n\u001b[32m      9\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mConfusion Matrix:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     10\u001b[39m \u001b[38;5;28mprint\u001b[39m(confusion_matrix(y_test, lr.predict(X_test)))\n",
+      "\u001b[31mNameError\u001b[39m: name 'classification_report' is not defined"
      ]
     }
    ],
@@ -1852,7 +1866,12 @@
     "lr.fit(X_train, y_train)\n",
     "\n",
     "acc = accuracy_score(y_test, lr.predict(X_test)) * 100\n",
-    "print(f\"Logistic Regression model accuracy: {acc:.2f}%\")"
+    "print(f\"Logistic Regression model accuracy: {acc:.2f}%\")\n",
+    "\n",
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(y_test, lr.predict(X_test)))\n",
+    "print(\"\\nConfusion Matrix:\")\n",
+    "print(confusion_matrix(y_test, lr.predict(X_test)))"
    ]
   }
  ],
