fixed bug repeated model twice in 2 different algorithms

--- a/ML_algo_trust_chain.ipynb
+++ b/ML_algo_trust_chain.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 181,
    "id": "76a46a98",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import classification_report, confusion_matrix\n"
+    "from sklearn.metrics import classification_report\n"
    ]
   },
   {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 182,
    "id": "b5d6a2b3",
    "metadata": {},
    "outputs": [
@@ -393,7 +393,7 @@
        "[10348 rows x 19 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 183,
    "id": "b9c80299",
    "metadata": {},
    "outputs": [
@@ -666,7 +666,7 @@
        "[10348 rows x 12 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 184,
    "id": "3bd73939",
    "metadata": {},
    "outputs": [
@@ -941,7 +941,7 @@
        "[10348 rows x 12 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 185,
    "id": "4987c1d2",
    "metadata": {},
    "outputs": [
@@ -1211,7 +1211,7 @@
        "[10348 rows x 12 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1232,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 186,
    "id": "95a2e041",
    "metadata": {},
    "outputs": [
@@ -1368,7 +1368,7 @@
        "4     9573            9         2  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1390,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 187,
    "id": "2de658a9",
    "metadata": {},
    "outputs": [
@@ -1405,7 +1405,7 @@
        "Name: Fraud Indicator, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1424,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 188,
    "id": "885a60dc",
    "metadata": {},
    "outputs": [
@@ -1434,7 +1434,7 @@
        "(8278, 11)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1462,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 189,
    "id": "4460e69a",
    "metadata": {},
    "outputs": [
@@ -1472,7 +1472,7 @@
        "array([1, 0, 0, ..., 0, 0, 1], shape=(2070,))"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1495,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 190,
    "id": "45a7ba1d",
    "metadata": {},
    "outputs": [
@@ -1505,7 +1505,7 @@
        "np.int64(1709)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1524,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 191,
    "id": "cc4b986d",
    "metadata": {},
    "outputs": [
@@ -1534,7 +1534,7 @@
        "np.float64(0.8256038647342995)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1542,6 +1542,43 @@
    "source": [
     "accuracy = np.sum(y_test==modelPrediction) / modelPrediction.size\n",
     "accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61428fe7",
+   "metadata": {},
+   "source": [
+    "Recall score for NB refrencing: https://www.geeksforgeeks.org/machine-learning/compute-classification-report-and-confusion-matrix-in-python/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "id": "cb0ecb47",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.98      0.77      0.87      1501\n",
+      "           1       0.62      0.97      0.75       569\n",
+      "\n",
+      "    accuracy                           0.83      2070\n",
+      "   macro avg       0.80      0.87      0.81      2070\n",
+      "weighted avg       0.88      0.83      0.83      2070\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(y_test, model.predict(X_test)))"
    ]
   },
   {
@@ -1562,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 193,
    "id": "b4871e49",
    "metadata": {},
    "outputs": [
@@ -1572,7 +1609,7 @@
        "array([0, 0, 0, ..., 0, 0, 0], shape=(2070,))"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 193,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1595,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 194,
    "id": "f9cbadc8",
    "metadata": {},
    "outputs": [
@@ -1605,7 +1642,7 @@
        "np.int64(1904)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 194,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1624,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 195,
    "id": "15377ab2",
    "metadata": {},
    "outputs": [
@@ -1656,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 196,
    "id": "ccc8bca8",
    "metadata": {},
    "outputs": [
@@ -1666,7 +1703,7 @@
        "np.float64(0.9198067632850242)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1674,6 +1711,43 @@
    "source": [
     "rf_accuracy = np.sum(y_test == rf_prediction) / rf_prediction.size\n",
     "rf_accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27e7d513",
+   "metadata": {},
+   "source": [
+    "Recall Score for RF "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "id": "80df773e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.94      0.95      0.95      1501\n",
+      "           1       0.87      0.83      0.85       569\n",
+      "\n",
+      "    accuracy                           0.92      2070\n",
+      "   macro avg       0.90      0.89      0.90      2070\n",
+      "weighted avg       0.92      0.92      0.92      2070\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(y_test, rf_model.predict(X_test)))"
    ]
   },
   {
@@ -1694,7 +1768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 198,
    "id": "447fa052",
    "metadata": {},
    "outputs": [
@@ -1723,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 199,
    "id": "52523b2c",
    "metadata": {},
    "outputs": [
@@ -1733,15 +1807,15 @@
        "array([0, 0, 0, ..., 0, 0, 0], shape=(2070,))"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = xgb.XGBClassifier(n_estimators=10)\n",
-    "model.fit(X_train,y_train)\n",
-    "XGmodelPrediction=model.predict(X_test)\n",
+    "XGBmodel = xgb.XGBClassifier(n_estimators=10)\n",
+    "XGBmodel.fit(X_train,y_train)\n",
+    "XGmodelPrediction=XGBmodel.predict(X_test)\n",
     "\n",
     "XGmodelPrediction"
    ]
@@ -1751,12 +1825,12 @@
    "id": "f57f8515",
    "metadata": {},
    "source": [
-    "Evaluate the accuracy of the Model"
+    "Evaluating the accuracy of the XGB Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 200,
    "id": "2eb7d545",
    "metadata": {},
    "outputs": [
@@ -1764,33 +1838,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "y_test: 5499     0\n",
-      "890      0\n",
-      "4488     0\n",
-      "10083    0\n",
-      "2351     0\n",
-      "        ..\n",
-      "2106     0\n",
-      "1720     0\n",
-      "9379     0\n",
-      "1566     0\n",
-      "9421     1\n",
-      "Name: Fraud Indicator, Length: 2070, dtype: int64\n",
-      "predictions: [0 0 0 ... 0 0 0]\n",
       "Accuracy: 91.98%\n"
      ]
     }
    ],
    "source": [
     "accuracy = accuracy_score(y_test, XGmodelPrediction)\n",
-    "print('y_test:', y_test)\n",
-    "print('predictions:', XGmodelPrediction)\n",
     "print(f\"Accuracy: {accuracy * 100:.2f}%\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 201,
    "id": "7bb10bed",
    "metadata": {},
    "outputs": [
@@ -1803,11 +1862,28 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.93      0.96      0.95      1501\n",
+      "           1       0.88      0.82      0.85       569\n",
+      "\n",
+      "    accuracy                           0.92      2070\n",
+      "   macro avg       0.91      0.89      0.90      2070\n",
+      "weighted avg       0.92      0.92      0.92      2070\n",
+      "\n"
+     ]
     }
    ],
    "source": [
     "# Feature importance\n",
-    "feature_importance = model.feature_importances_\n",
+    "feature_importance = XGBmodel.feature_importances_\n",
     "\n",
     "# Plotting feature importance\n",
     "plt.barh(X.columns, feature_importance)\n",
@@ -1815,7 +1891,10 @@
     "plt.ylabel('Features')\n",
     "plt.title('Visualizing Important Features with XGBoost')\n",
     "\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(y_test, XGBmodel.predict(X_test)))\n"
    ]
   },
   {
@@ -1836,7 +1915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 202,
    "id": "b08887b2",
    "metadata": {},
    "outputs": [
@@ -1846,18 +1925,16 @@
      "text": [
       "Logistic Regression model accuracy: 86.71%\n",
       "\n",
-      "Classification Report:\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'classification_report' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[45]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mLogistic Regression model accuracy: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00macc\u001b[38;5;132;01m:\u001b[39;00m\u001b[33m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m%\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      7\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mClassification Report:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mclassification_report\u001b[49m(y_test, lr.predict(X_test)))\n\u001b[32m      9\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mConfusion Matrix:\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     10\u001b[39m \u001b[38;5;28mprint\u001b[39m(confusion_matrix(y_test, lr.predict(X_test)))\n",
-      "\u001b[31mNameError\u001b[39m: name 'classification_report' is not defined"
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.90      0.92      0.91      1501\n",
+      "           1       0.77      0.73      0.75       569\n",
+      "\n",
+      "    accuracy                           0.87      2070\n",
+      "   macro avg       0.84      0.83      0.83      2070\n",
+      "weighted avg       0.87      0.87      0.87      2070\n",
+      "\n"
      ]
     }
    ],
@@ -1869,9 +1946,7 @@
     "print(f\"Logistic Regression model accuracy: {acc:.2f}%\")\n",
     "\n",
     "print(\"\\nClassification Report:\")\n",
-    "print(classification_report(y_test, lr.predict(X_test)))\n",
-    "print(\"\\nConfusion Matrix:\")\n",
-    "print(confusion_matrix(y_test, lr.predict(X_test)))"
+    "print(classification_report(y_test, lr.predict(X_test)))"
    ]
   }
  ],
